--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,66 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Encode+Sans+Condensed:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
+
+
+button {
+  padding: 12px;
+  border-radius: 7px;
+  border: 1px solid white;
+  background-color: lime;
+  font-size: 14px;
+  font-weight: bold;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+button:hover {
+  background-color: limegreen;
+  border: 2px solid white;
+}
+
+input {
+  padding: 10px;
+  margin-right: 20px;
+  width: 30%;
+  font-size: 15px;
+}
+
+form {
+  margin-top: 20px;
+  margin-left: 10px;
+}
+
+body {
+  background-color: #eee;
+  margin: 20px;
+  font-family: 'Encode Sans Condensed', sans-serif;
+}
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+
+}
+
+.item {
+  margin-right: 5%;
+  text-align: center;
+  border: 1px solid black;
+  width: 350px;
+  margin-bottom: 5%;
+  height: 350px;
+  box-shadow: 3px 3px;
+  border-radius: 5%;
+}
+
+.item img {
+  border-radius: 50%;
+  width: 200px;
+}
+
+.random {
+  width: 80%;
+  text-align: center;
+}
+
+.random img {
+  width: 80%;
 }
